# swift-advent

./: BUILD.bazel
Sources/: AdventDay.swift  Day00.swift  Logging.swift  Shell.swift
